# sql-lineage

./: .gitignore  GITHUB_SETUP_COMMANDS.md  LICENSE  README.md  REFACTORING_SUMMARY.md  dev.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  test_circular_dependency.py  test_create_view_multiple_ctes.py  test_cte_stats_query.py  test_formatter.py  test_insurance_profitability_query.py  test_lineage_chain.py  test_lineage_mapper.py  test_metadata_comparison.py  test_multiple_queries_lineage.py  test_mysql_database_table_naming.py  test_ng_query.py  test_quick.py  test_samples.py  test_simple.py  test_three_trino_queries.py  test_trino_support.py  test_visualization.py
docs/: LINEAGE_COMBINER.md
examples/: EXTERNAL_METADATA_INTEGRATION.md  before_after_demo.py  external_metadata_providers.py  integration_examples.py  sample.sql  sample_usage.py
output-0731/: lineage_chain_test_advanced_comprehensive_lineage_chain.json  lineage_chain_test_complex_joins_with_aggregation_lineage_chain.json  lineage_chain_test_complex_multi_cte_lineage_chain.json  lineage_chain_test_create_table_as_select_lineage_chain.json  lineage_chain_test_cte_stats_query_lineage_chain.json  lineage_chain_test_quick_aggregation_with_groupby_orderby_lineage_chain.json  lineage_chain_test_quick_complex_multi_cte_query_lineage_chain.json  lineage_chain_test_quick_ctas_query_lineage_chain.json  lineage_chain_test_quick_cte_query_lineage_chain.json  lineage_chain_test_quick_join_query_lineage_chain.json  lineage_chain_test_quick_simple_query_lineage_chain.json  lineage_chain_test_sample1_complex_cte_lineage_chain.json  lineage_chain_test_sample2_qualified_names_lineage_chain.json  lineage_chain_test_sample3_union_cte_lineage_chain.json  lineage_chain_test_sample4_complex_multi_cte_union_lineage_chain.json  lineage_chain_test_sample_ctas_aggregated_lineage_chain.json  lineage_chain_test_sample_ctas_complex_cte_lineage_chain.json  lineage_chain_test_sample_ctas_simple_lineage_chain.json  lineage_chain_test_simple_cte_lineage_chain.json  lineage_chain_test_simple_join_lineage_chain.json  lineage_chain_test_simple_select_lineage_chain.json  lineage_chain_test_subquery_lineage_chain.json  lineage_chain_test_union_query_lineage_chain.json  lineage_chain_test_window_functions_lineage_chain.json
src/: test_combiner_circular_dependency.py  test_cte_top_query.py  test_dialect_auto_detection.py  test_multi_db_join_query.py  test_multiple_queries_lineage.py  test_subquery_aliases.py
src/analyzer/: __init__.py  cli.py  (+4 more)
tests/: __init__.py  conftest.py  test_analyzer.py  test_comprehensive_samples.py  test_original_samples.py
(+48 files in other folders)
